--- a/reactapp/src/pages/allOrdersPage/EditShipDateButton.css
+++ b/reactapp/src/pages/allOrdersPage/EditShipDateButton.css
@@ -1,40 +1,8 @@
-.edit-ship-date-table {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-.edit-ship-date-table table {
-    border-collapse: collapse;
-    width: auto;
-}
-
-.edit-ship-date-table .label {
-    text-align: right; 
-}
-
-.edit-ship-date-table .input-col {
-    text-align: left; 
-}
-
-
-
-.edit-ship-date-table tr td {
-    border: 0;
-    padding: 0;
-}
-
-.edit-ship-date-table table tr {
-    width: 50%;
-}
-
 .edit-ship-date-div {
     font-size: 0.7rem;
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: center;
     width: 100%;
 }
 
